--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -72,19 +72,99 @@
                     <section class="sidebar">
 
                         <ul class="sidebar-menu" data-widget="tree">
-                            <li>@Html.ActionLink("NEUE ERFASSUNG - Montage", "Create", "Neuezeiterfassung")</li>
-                            <li>@Html.ActionLink("NEUE ERFASSUNG - MEBA", "CreateMEBA", "Neuezeiterfassung")</li>
-                            _____________________________
+                            <li class="active treeview menu-open">
+                            <li class="treeview">
+                                <a href="#">
+                                    <i class="fa fa-upload" aria-hidden="true"></i>
+                                    <span>Neue Zeiterfassung</span>
+                                    <span class="pull-right-container">
+                                        <i class="fa fa-angle-left pull-right"></i>
+                                    </span>
+                                </a>
+                                <ul class="treeview-menu">
+                                    <li>
+                                        <a href="@Url.Action("Create", "Neuezeiterfassung")">
+                                            <i class="fa fa-cogs" aria-hidden="true"></i>
+                                            <span>Montage</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("CreateMEBA", "Neuezeiterfassung")">
+                                            <i class="fa fa-cogs" aria-hidden="true"></i>
+                                            <span>MeBa</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="divider">fdsfds</li>
+                            <li>
+                                <a href="@Url.Action("Index", "MitarbeiterInSchicht")">
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                    <span>Übersicht - Montage</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("IndexMEBA", "MitarbeiterInSchicht")">
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                    <span>Übersicht - MeBa</span>
+                                </a>
+                            </li>
 
-                            <li>@Html.ActionLink("Übersicht - Bänder", "Index", "MitarbeiterInSchicht")</li>
-                            <li>@Html.ActionLink("Übersicht - MEBA  ", "IndexMEBA", "MitarbeiterInSchicht")</li>
-                            _____________________________
-                            <li>@Html.ActionLink("Produktionsanlagen", "Index", "Produktionsanlage")</li>
-                            <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
-                            <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
-                            <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
-                            <li>@Html.ActionLink("Produktivität", "Create", "Produktivität")</li>
+                            <li class="divider">dsfds</li>
+                            <li>
+                                <a href="@Url.Action("Index", "Produktionsanlage")">
+                                    <i class="fa fa-product-hunt" aria-hidden="true"></i>
+                                    <span>Produktionsanlagen</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Fertigungsteil")">
+                                    <i class="fa fa-car" aria-hidden="true"></i>
+                                    <span>Fertigungsteile</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Mitarbeiter")">
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <span>Mitarbeiter</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "TeileInProduktionsanlage")">
+                                    <i class="fa fa-list-ul" aria-hidden="true"></i>
+                                    <span>Teile bei Anlagen</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Create", "Produktivität")">
+                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                                    <span>Produktivität</span>
+                                </a>
+                            </li>
 
+                            <li class="treeview">
+                                <a href="#">
+                                    <i class="fa fa-archive" aria-hidden="true"></i>
+                                    <span>Archiv</span>
+                                    <span class="pull-right-container">
+                                        <i class="fa fa-angle-left pull-right"></i>
+                                    </span>
+                                </a>
+                                <ul class="treeview-menu">
+                                    <li>
+                                        <a href="@Url.Action("ArchivMontage", "MitarbeiterInSchicht")">
+                                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            <span>Montage</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("ArchivMeBa", "MitarbeiterInSchicht")">
+                                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            <span>MeBa</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                         <!-- /.sidebar-menu -->
                     </section>
@@ -92,7 +172,7 @@
                 </aside>
                 <!-- Content Wrapper. Contains page content -->
                 <div class="content-wrapper">
-                    
+
                     @RenderBody()
 
                 </div>
@@ -168,19 +248,107 @@
                     <section class="sidebar">
 
                         <ul class="sidebar-menu" data-widget="tree">
-                            <li>@Html.ActionLink("NEUE ERFASSUNG - Montage", "Create", "Neuezeiterfassung")</li>
-                            <li>@Html.ActionLink("NEUE ERFASSUNG - MEBA", "CreateMEBA", "Neuezeiterfassung")</li>
-                            _____________________________
+                            <li class="active treeview menu-open">
+                            <li class="treeview">
+                                <a href="#">
+                                    <i class="fa fa-upload" aria-hidden="true"></i>
+                                    <span>Neue Zeiterfassung</span>
+                                    <span class="pull-right-container">
+                                        <i class="fa fa-angle-left pull-right"></i>
+                                    </span>
+                                </a>
+                                <ul class="treeview-menu">
+                                    <li>
+                                        <a href="@Url.Action("Create", "Neuezeiterfassung")">
+                                            <i class="fa fa-cogs" aria-hidden="true"></i>
+                                            <span>Montage</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("CreateMEBA", "Neuezeiterfassung")">
+                                            <i class="fa fa-cogs" aria-hidden="true"></i>
+                                            <span>MeBa</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="divider">fdsfds</li>
+                            <li>
+                                <a href="@Url.Action("Index", "MitarbeiterInSchicht")">
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                    <span>Übersicht - Montage</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("IndexMEBA", "MitarbeiterInSchicht")">
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                    <span>Übersicht - MeBa</span>
+                                </a>
+                            </li>
 
-                            <li>@Html.ActionLink("Übersicht - Bänder", "Index", "MitarbeiterInSchicht")</li>
-                            <li>@Html.ActionLink("Übersicht - MEBA  ", "IndexMEBA", "MitarbeiterInSchicht")</li>
-                            _____________________________
-                            <li>@Html.ActionLink("Produktionsanlagen", "Index", "Produktionsanlage")</li>
-                            <li>@Html.ActionLink("Fertigungsteile", "Index", "Fertigungsteil")</li>
-                            <li>@Html.ActionLink("Mitarbeiter", "Index", "Mitarbeiter")</li>
-                            <li>@Html.ActionLink("Teile bei Anlagen", "Index", "TeileInProduktionsanlage")</li>
-                            <li>@Html.ActionLink("Produktivität", "Create", "Produktivität")</li>
-                            <li>@Html.ActionLink("Verwaltung", "Index", "Zugriffsrechte")</li>
+                            <li class="divider">dsfds</li>
+                            <li>
+                                <a href="@Url.Action("Index", "Produktionsanlage")">
+                                    <i class="fa fa-product-hunt" aria-hidden="true"></i>
+                                    <span>Produktionsanlagen</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Fertigungsteil")">
+                                    <i class="fa fa-car" aria-hidden="true"></i>
+                                    <span>Fertigungsteile</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "Mitarbeiter")">
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <span>Mitarbeiter</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Index", "TeileInProduktionsanlage")">
+                                    <i class="fa fa-list-ul" aria-hidden="true"></i>
+                                    <span>Teile bei Anlagen</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Create", "Produktivität")">
+                                    <i class="fa fa-bar-chart" aria-hidden="true"></i>
+                                    <span>Produktivität</span>
+                                </a>
+                            </li>
+
+                            <li class="treeview">
+                                <a href="#">
+                                    <i class="fa fa-archive" aria-hidden="true"></i>
+                                    <span>Archiv</span>
+                                    <span class="pull-right-container">
+                                        <i class="fa fa-angle-left pull-right"></i>
+                                    </span>
+                                </a>
+                                <ul class="treeview-menu">
+                                    <li>
+                                        <a href="@Url.Action("ArchivMontage", "MitarbeiterInSchicht")">
+                                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            <span>Montage</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="@Url.Action("ArchivMeBa", "MitarbeiterInSchicht")">
+                                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            <span>MeBa</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="divider">fdsfds</li>
+
+                            <li>
+                                <a href="@Url.Action("Index", "Zugriffsrechte")">
+                                    <i class="fa fa-gavel" aria-hidden="true"></i>
+                                    <span>Verwaltung</span>
+                                </a>
+                            </li>
                         </ul>
                         <!-- /.sidebar-menu -->
                     </section>
@@ -218,7 +386,6 @@
             </footer>
         </div>
     }
-    
+
 </body>
 </html>
-    
