--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -153,13 +153,14 @@
                                 <ul class="treeview-menu">
                                     <li>
                                         <a href="@Url.Action("ArchivMontage", "MitarbeiterInSchicht")">
-                                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            <i class="fa fa-circle" aria-hidden="true"></i>
+
                                             <span>Montage</span>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="@Url.Action("ArchivMeBa", "MitarbeiterInSchicht")">
-                                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                            <i class="fa fa-circle" aria-hidden="true"></i>
                                             <span>MeBa</span>
                                         </a>
                                     </li>
