--- a/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/TeileInProduktionsanlage/Index.cshtml
@@ -6,8 +6,7 @@
         <div class="box box-info">
             <div class="box-header with-border">
                 <h3>Übersicht der Zugehörigkeit der Teile zu den Produktionsanlagen</h3>
-                <h5 style="padding-bottom: 25px; padding-top: 5px; color:red">Hinweis: Bänder dürfen nur über einen Fertigungsteil verfügen.</h5>
-                <table id="example" class="table table-striped table-bordered" style="width:100%">
+                <table id="myTable" class="table table-striped table-bordered" style="width:100%">
                     <thead>
                         <tr>
                             <th>
@@ -17,7 +16,6 @@
                                 @Html.DisplayNameFor(model => model.Fertigungsteil)
                             </th>
                             <th>
-
                             </th>
                         </tr>
                     </thead>
@@ -37,7 +35,7 @@
 
                                     @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
                                 </td>
-                            </tr>
+                            </tr>   
                         }
                     </tbody>
                 </table>
@@ -53,7 +51,7 @@
 
     <script>
         $(document).ready(function () {
-            $('#example').DataTable();
+            $('#myTable').DataTable();
         });
     </script>
 }
