add condition for unique username

--- a/ZeiterfassungPierburg/Views/Zugriffsrechte/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Zugriffsrechte/Create.cshtml
@@ -51,7 +51,7 @@ else
                         </div>
                     </div>
                 }
-
+                @ViewBag.Message
 
             </div>
         </div>
