correct divider menu items in layout

--- a/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="divider">fdsfds</li>
+                            <li class="divider"> <br /></li>
                             <li>
                                 <a href="@Url.Action("Index", "MitarbeiterInSchicht")">
                                     <i class="fa fa-user-circle" aria-hidden="true"></i>
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
 
-                            <li class="divider">dsfds</li>
+                            <li class="divider"> <br /></li>
                             <li>
                                 <a href="@Url.Action("Index", "Produktionsanlage")">
                                     <i class="fa fa-product-hunt" aria-hidden="true"></i>
@@ -273,7 +273,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="divider">fdsfds</li>
+                            <li class="divider"> <br /></li>
                             <li>
                                 <a href="@Url.Action("Index", "MitarbeiterInSchicht")">
                                     <i class="fa fa-user-circle" aria-hidden="true"></i>
@@ -287,7 +287,7 @@
                                 </a>
                             </li>
 
-                            <li class="divider">dsfds</li>
+                            <li class="divider"> <br /></li>
                             <li>
                                 <a href="@Url.Action("Index", "Produktionsanlage")">
                                     <i class="fa fa-product-hunt" aria-hidden="true"></i>
@@ -342,16 +342,16 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="divider">fdsfds</li>
+                            <li class="divider"> <br /></li>
 
                             <li>
                                 <a href="@Url.Action("Index", "Zugriffsrechte")">
                                     <i class="fa fa-gavel" aria-hidden="true"></i>
                                     <span>Verwaltung</span>
                                 </a>
-                            </li>
+                            </li>   
                         </ul>
-                        <!-- /.sidebar-menu -->
+                        <!-- /.sidebar-menu> 
                     </section>
                     <!-- /.sidebar -->
                 </aside>
