--- a/ZeiterfassungPierburg/Views/Produktivität/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktivität/Create.cshtml
@@ -16,7 +16,7 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.ProduktionsanlageList, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
+                        <div class="col-md-2">
                             @Html.DropDownListFor(m => m.ProduktionsanlageID, Model.ProduktionsanlageList, null, new { @id = "panlage", @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.ProduktionsanlageID, "", new { @class = "text-danger" })
                         </div>
@@ -24,23 +24,17 @@
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.FertigungteilList, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
+                        <div class="col-md-2">
                             @Html.DropDownListFor(m => m.FertigungsteilID, Model.FertigungteilList, null, new { @id = "panlage", @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.FertigungsteilID, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Day, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.DropDownListFor(m => m.Day, Model.DayList, null, new { @id = "panlage", @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.DayList, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Art, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
+                        <div class="col-md-2">
                             @Html.DropDownListFor(m => m.Art, Model.ArtList, null, new { @id = "panlage", @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.ArtList, "", new { @class = "text-danger" })
                         </div>
@@ -49,9 +43,9 @@
                     if (Convert.ToInt32(Session["AccessLayer"]) == 1)
                     {<text>
 
-                            <div class="form-group">
+                            <div class="form-group">y
                                 @Html.LabelFor(model => model.MitarbeiterID, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-8">
+                                <div class="col-md-2">
                                     @Html.DropDownListFor(m => m.MitarbeiterID, Model.MitarbeiterList, null, new { @id = "panlage", @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.MitarbeiterList, "", new { @class = "text-danger" })
                                 </div>
@@ -59,31 +53,32 @@
                     </text>
                 }
 
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Day, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-2">
+                                    @Html.DropDownListFor(m => m.Day, Model.DayList, null, new { @id = "panlage", @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.DayList, "", new { @class = "text-danger" })
+                                </div>
 
-                <div class="form-group">
+                                @Html.LabelFor(model => model.Month, htmlAttributes: new { @class = "control-label col-md-1" })
+                                <div class="col-md-2">
+                                    @Html.DropDownListFor(m => m.Month, Model.MonthList, null, new { @id = "panlage", @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.MonthList, "", new { @class = "text-danger" })
+                                </div>
 
-                    @Html.LabelFor(model => model.Month, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-8">
-                        @Html.DropDownListFor(m => m.Month, Model.MonthList, null, new { @id = "panlage", @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.MonthList, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                                @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-md-1" })
+                                <div class="col-md-2">
 
+                                    @Html.EditorFor(model => model.Year, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
+                                    <label><small>Für alle Jahre 0 lassen.  </small></label>
+                                </div>
+                            </div>
 
-
-                <div class="form-group">
-
-                    @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-8">
-
-                        @Html.EditorFor(model => model.Year, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
-                    </div>
-                </div>
                 <div class="form-group">
 
                     <div class="col-md-8 col-xs-offset-2">
-                        <label>Hinweis: Für Ausrechnung der gesamten Produktivität alle Felder unverändert lassen</label>
+                        <label style="color:red">Hinweis: </label><label>  &nbsp; Für Ausrechnung der gesamten Produktivität alle Felder unverändert lassen</label>
 
                     </div>
                 </div>
@@ -91,7 +86,7 @@
 
 
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-8">
+                    <div class="col-md-offset-2 col-md-4">
                         <input type="submit" value="Produktivität anzeigen" class="btn btn-default" />
                     </div>
                 </div>
